--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "marketing",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack serve --config config/webpack.dev.js",
-    "build": "webpack --config config/webpack.prod.js"
+    "dev": "webpack serve --config config/webpack.dev.js --open",
+    "start": "webpack --config config/webpack.prod.js --mode production && node server.js"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
