--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "webpack serve --config config/webpack.dev.js --open",
-    "start": "webpack --config config/webpack.prod.js --mode production && node server.js"
+    "start": "webpack --mode production --config config/webpack.prod.js && node server.js"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
