--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "marketing",
   "version": "1.0.0",
   "scripts": {
-    "dev": "webpack serve --config config/webpack.dev.js --open",
     "start": "webpack --mode production --config config/webpack.prod.js && node server.js"
   },
   "dependencies": {
@@ -10,7 +9,8 @@
     "@material-ui/icons": "^4.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "webpack": "^5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
