--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "marketing",
   "version": "1.0.0",
   "scripts": {
+    "dev": "webpack serve --config config/webpack.dev.js --open",
     "start": "webpack --mode production --config config/webpack.prod.js && node server.js"
   },
   "dependencies": {
+    "webpack": "^5.4.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "webpack": "^5.4.0"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -22,7 +23,6 @@
     "css-loader": "^5.0.0",
     "html-webpack-plugin": "^4.5.0",
     "style-loader": "^2.0.0",
-    "webpack": "^5.4.0",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.2.0"
