--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "marketing",
   "version": "1.0.0",
   "scripts": {
+    "heroku-prebuild": "npm install --dev",
     "dev": "webpack serve --config config/webpack.dev.js --open",
     "start": "webpack --mode production --config config/webpack.prod.js && node server.js"
   },
